opam-version: "1.2"
name: "fix-engine"
version: "1.0"
maintainer: "Denis Ignatovich <denis@aestheticintegration.com>"
authors: "Denis Ignatovich <denis@aestheticintegration.com>, Grant Passmore <grant@aestheticintegration.com>"
homepage: "https://github.com/AestheticIntegration/fix-engine"
bug-reports: "https://github.com/AestheticIntegration/fix-engine/issues"
license: "APACHE-2.0"
dev-repo: "https://github.com/AestheticIntegration/fix-engine"
doc: "https://AestheticIntegration.github.io/fix-engine/doc"
available: [ ocaml-version >= "4.05" & < "4.06" ]
build: [["dune" "build" "-p" name "-j" jobs]]
depends: [
  "dune" {build}
  "cmdliner"
  "lwt" {= "3.1.0"}
  "lwt-zmq"
  "yojson"
  "zmq"
]
