(library
  (name refine_functions)
  (public_name fix-engine.refine_functions)
  (wrapped false)
  (flags (:standard -open Imandra_interactive -open Imandra_prelude -warn-error -A+8+39 -alert -deprecated -w -33-58))
  (libraries imandra-base.prelude imandra-base.interactive core templates venue venue_types)
)
