(rule
  (targets core_printer.ml)
  (deps core_printer.iml)
   (action
    (with-stdout-to core_printer.ml
       (run imandra-extract core_printer.iml))))

(library
  (name        core_printer)
  (public_name fix-engine.core_printer)
  (wrapped  false)
  (flags :standard -open Imandra_prelude -warn-error -A+8+39)
  (libraries core_pp core_time_defaults_pp core yojson imandra-base.prelude )
)
