(library
  (name core_time_defaults_pp)
  (public_name fix-engine.core_time_defaults_pp)
  (wrapped false)
  (flags (:standard -open Imandra_interactive -open Imandra_prelude -warn-error -A+8+39 -alert -deprecated -w -33-58))
  (libraries imandra-base.prelude imandra-base.interactive core_pp core_utils_pp)
)
