(rule
  (targets numeric.ml)
  (deps numeric.iml)
   (action
    (with-stdout-to numeric.ml
       (run imandra-extract  numeric.iml))))
       
(rule
  (targets datetime.ml)
  (deps datetime.iml)
   (action
    (with-stdout-to datetime.ml
       (run imandra-extract  datetime.iml))))
       
(rule
  (targets imandra_utils.ml)
  (deps imandra_utils.iml)
   (action
    (with-stdout-to imandra_utils.ml
       (run imandra-extract  imandra_utils.iml))))

(library
  (name        core)
  (public_name fix-engine.core)
  (wrapped  false)
  (flags :standard -open Imandra_prelude -warn-error -A+8+39)
  (libraries imandra-base.prelude )
)
