(rule
  (targets encode_app_messages.ml)
  (deps encode_app_messages.iml)
   (action
    (with-stdout-to encode_app_messages.ml
       (run imandra-extract encode_app_messages.iml))))

(rule
  (targets encode_app_tags.ml)
  (deps encode_app_tags.iml)
   (action
    (with-stdout-to encode_app_tags.ml
       (run imandra-extract encode_app_tags.iml))))

(rule
  (targets full_app_enums_json.ml)
  (deps full_app_enums_json.iml)
   (action
    (with-stdout-to full_app_enums_json.ml
       (run imandra-extract full_app_enums_json.iml))))

(rule
  (targets full_app_messages_json.ml)
  (deps full_app_messages_json.iml)
   (action
    (with-stdout-to full_app_messages_json.ml
       (run imandra-extract full_app_messages_json.iml))))

(rule
  (targets full_app_records_json.ml)
  (deps full_app_records_json.iml)
   (action
    (with-stdout-to full_app_records_json.ml
       (run imandra-extract full_app_records_json.iml))))

(rule
  (targets full_app_tags_json.ml)
  (deps full_app_tags_json.iml)
   (action
    (with-stdout-to full_app_tags_json.ml
       (run imandra-extract full_app_tags_json.iml))))

(rule
  (targets parse_app_enums.ml)
  (deps parse_app_enums.iml)
   (action
    (with-stdout-to parse_app_enums.ml
       (run imandra-extract parse_app_enums.iml))))

(rule
  (targets parse_app_messages.ml)
  (deps parse_app_messages.iml)
   (action
    (with-stdout-to parse_app_messages.ml
       (run imandra-extract parse_app_messages.iml))))

(rule
  (targets parse_app_records.ml)
  (deps parse_app_records.iml)
   (action
    (with-stdout-to parse_app_records.ml
       (run imandra-extract parse_app_records.iml))))

(rule
  (targets parse_app_tags.ml)
  (deps parse_app_tags.iml)
   (action
    (with-stdout-to parse_app_tags.ml
       (run imandra-extract parse_app_tags.iml))))


(library
  (name        protocol_exts_pp_vg)
  (public_name fix-engine.protocol_exts_pp_vg)
  (wrapped  false)
  (flags (:standard -open Imandra_prelude))
  (libraries imandra-prelude core_time_defaults yojson core_pp core_time_defaults_pp protocol_exts_vg)
)
