(library
  (name protocol_exts_pp)
  (public_name fix-engine.protocol_exts_pp)
  (wrapped false)
  (flags (:standard -open Imandra_interactive -open Imandra_prelude -warn-error -A+8+39 -alert -deprecated -w -33-58))
  (libraries imandra-base.prelude imandra-base.interactive decoders-yojson core_pp protocol_exts yojson)
)
