(library
 (name runner)
 (public_name fix-engine.runner)
 (wrapped false)
 (modules fix_io engine server)
 (libraries 
  lwt.unix
  fix_engine
  fix-engine.protocol_pp
  fix-engine.core_utils_pp
  decoders-yojson
 )
)

(executable
 (name zmq_server)
 (modules zmq_server)
 (libraries 
  fix-engine.runner
  zmq-lwt
 )
)
