(library
 (name runner)
 (public_name fix-engine.runner)
 (wrapped false)
 (modules fix_io engine runner)
 (libraries 
  lwt.unix
  fix_engine
  fix-engine.protocol_pp
  fix-engine.core_utils_pp
  decoders-yojson
 )
)

(executable
 (name zmq_engine)
 (modules zmq_engine)
 (libraries 
  fix-engine.runner
  zmq-lwt
  cmdliner
 )
)
