(library
 (name runner)
 (public_name fix-engine.runner)
 (wrapped false)
 (modules fix_io engine runner)
 (libraries 
  lwt.unix
  fix_engine
  fix-engine.protocol_pp
  fix-engine.core_utils_pp
  decoders-yojson
 )
)

(executable
 (name test_server)
 (modules test_server)
 (libraries 
  fix-engine.runner
  fix-engine-gen.venue
  fix-engine-gen.conversions
  fix-engine-gen.protocol_exts_pp
  fix-engine-gen.simulation_utils_gen
 )
)

(executable
 (name zmq_engine)
 (modules zmq_engine)
 (libraries 
  fix-engine.runner
  zmq-lwt
  cmdliner
 )
)
