(rule
  (targets fix_io.ml)
  (deps fix_io.iml)
   (action
    (with-stdout-to fix_io.ml
       (run imandra-extract fix_io.iml))))

(rule
  (targets session_manager.ml)
  (deps session_manager.iml)
   (action
    (with-stdout-to session_manager.ml
       (run imandra-extract session_manager.iml))))

(rule
  (targets engine.ml)
  (deps engine.iml)
   (action
    (with-stdout-to engine.ml
       (run imandra-extract engine.iml))))

(rule
  (targets model.ml)
  (deps model.iml)
   (action
    (with-stdout-to model.ml
       (run imandra-extract model.iml))))


(library
  (name        fix_simulation_utils)
  (public_name fix-engine.fix_simulation_utils)
  (wrapped  false)
  (flags (:standard -open Imandra_prelude -open Unix -warn-error -A+8+39))
  (libraries 
        lwt.unix
        venue
        fix_engine
        core_utils
        core_pp
        core_time_defaults
        core_time_defaults_pp
        types_pp
        protocol_pp
        conversions   
        lwt-zmq 
        imandra-base.prelude   
        imandra-client.lib
  )
)

