; (executable
;  (name test_server)
;  (modules test_server)
;  (modes byte)
;  (libraries cmdliner fix_simulation_utils))

(executable
 (name server)
 (public_name fix-engine.server)
 (modules server)
 (modes byte)
 (libraries cmdliner lwt fix_simulation_utils))

(executable
 (name client)
 (public_name fix-engine.client)
 (modules client)
 (modes byte)
 (libraries cmdliner zmq threads.posix fix_simulation_utils))
