opam-version: "1.2"
name: "fix-engine"
version: "1.0"
maintainer: "Kostya Kanichev <kostya@aestheticintegration.com>"
authors: "Kostya Kanichev <kostya@aestheticintegration.com>, 
  Denis Ignatovich <denis@aestheticintegration.com>, 
  Ewen Maclean <ewen@aestheticintegration.com>,
  Grant Passmore <grant@aestheticintegration.com>, 
  Matt Bray <matt@aestheticintegration.com>,
  Nicola Mometto <nicola@aestheticintegration.com>"
homepage: "https://github.com/AestheticIntegration/fix-engine"
bug-reports: "https://github.com/AestheticIntegration/fix-engine/issues"
license: "APACHE-2.0"
dev-repo: "https://github.com/AestheticIntegration/fix-engine"
doc: "https://AestheticIntegration.github.io/fix-engine/doc"
available: [ ocaml-version >= "4.01" & < "4.02" ]
build: [
  [ "ocaml" "pkg/pkg.ml" "build" "--pinned" "%{pinned}%" ]
]
depends: [
  "ocamlfind" {build}
  "ocamlbuild" {build}
  "topkg" {build}
  "yojson"
  "lwt" {="4.0.1"}
  "cmdliner"
]
