(executable
 (name test_runner)
 (libraries threads cmdliner lwt.unix fix-engine.protocol_pp
   fix-engine.core_utils_pp)
 (modes byte)
 (modules test_runner test_runner_utils config_parser message_stream))

(executable
 (name parser_test_runner)
 (libraries fix-engine.core_utils_pp)
 (modes byte)
 (modules parser_test_runner))

(executable
 (name test_server)
 (modules test_server)
 (libraries fix-engine.runtime model.simulation))

(executable
 (name parser_test_runner)
 (modules parser_test_runner parser_tests)
 (libraries fix-engine.protocol_pp fix-engine.protocol))
