(rule
  (targets base_vgs.ml)
  (deps base_vgs.iml)
   (action
    (with-stdout-to base_vgs.ml
       (run imandra-extract base_vgs.iml))))

(rule
  (targets datetime_vgs.ml)
  (deps datetime_vgs.iml)
   (action
    (with-stdout-to datetime_vgs.ml
       (run imandra-extract datetime_vgs.iml))))

(rule
  (targets float_vgs.ml)
  (deps float_vgs.iml)
   (action
    (with-stdout-to float_vgs.ml
       (run imandra-extract float_vgs.iml))))

(rule
  (targets heartbeat_vgs.ml)
  (deps heartbeat_vgs.iml)
   (action
    (with-stdout-to heartbeat_vgs.ml
       (run imandra-extract heartbeat_vgs.iml))))

(rule
  (targets logon_vgs.ml)
  (deps logon_vgs.iml)
   (action
    (with-stdout-to logon_vgs.ml
       (run imandra-extract logon_vgs.iml))))

(rule
  (targets logout_vgs.ml)
  (deps logout_vgs.iml)
   (action
    (with-stdout-to logout_vgs.ml
       (run imandra-extract logout_vgs.iml))))

(rule
  (targets reject_vgs.ml)
  (deps reject_vgs.iml)
   (action
    (with-stdout-to reject_vgs.ml
       (run imandra-extract reject_vgs.iml))))

(rule
  (targets seq_num_vgs.ml)
  (deps seq_num_vgs.iml)
   (action
    (with-stdout-to seq_num_vgs.ml
       (run imandra-extract seq_num_vgs.iml))))
  
(rule
  (targets seqreset_reset_vgs.ml)
  (deps seqreset_reset_vgs.iml)
   (action
    (with-stdout-to seqreset_reset_vgs.ml
       (run imandra-extract seqreset_reset_vgs.iml))))

(rule
  (targets example_min_vg.ml)
  (deps example_min_vg.iml)
   (action
    (with-stdout-to example_min_vg.ml
       (run imandra-extract example_min_vg.iml))))


(library
  (name        vgs)
  (public_name fix-engine.vgs)
  (wrapped  false)
  (flags (:standard -open Imandra_prelude -warn-error -A+8+39))
  (libraries imandra-base.prelude core fix_engine)
)