(library
 (name runtime)
 (public_name fix-engine.runtime)
 (wrapped false)
 (modules fix_io engine runtime common message)
 (preprocess (pps ppx_deriving.std))
 (libraries lwt.unix fix_engine fix-engine.protocol_pp
   fix-engine.core_utils_pp decoders-yojson logs))

(executable
 (name zmq_engine)
 (modules zmq_engine config)
 (libraries fix-engine.runtime zmq-lwt cmdliner logs logs.cli))
