(rule
  (targets string_checks.ml)
  (deps string_checks.iml)
   (action
    (with-stdout-to string_checks.ml
       (run imandra-extract  string_checks.iml))))
       
(rule
  (targets model_tag_names.ml)
  (deps model_tag_names.iml)
   (action
    (with-stdout-to model_tag_names.ml
       (run imandra-extract  model_tag_names.iml))))
       
(rule
  (targets model_enum_names.ml)
  (deps model_enum_names.iml)
   (action
    (with-stdout-to model_enum_names.ml
       (run imandra-extract  model_enum_names.iml))))
       
(rule
  (targets string_assoc_common.ml)
  (deps string_assoc_common.iml)
   (action
    (with-stdout-to string_assoc_common.ml
       (run imandra-extract  string_assoc_common.iml))))
       
(rule
  (targets string_assoc.ml)
  (deps string_assoc.iml)
   (action
    (with-stdout-to string_assoc.ml
       (run imandra-extract  string_assoc.iml))))
       
(library
  (name string_factory)
  (public_name fix-engine.string_factory)
  (wrapped false)
  (flags (:standard -open Imandra_prelude -warn-error -A+8+39))
  (libraries imandra-prelude venue_types)
)
